--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pinia-plugin-persistedstate": "^4.3.0",
     "reflect-metadata": "^0.2.2",
     "vue": "^3.5.13",
+    "vue-i18n": "^11.1.6",
     "vue-router": "^4.5.1",
     "vue-tg": "^0.8.0"
   },
